# fatapp

./: .gitignore  README.md  docker-compose.yml  setup-certs.sh
backend/: .dockerignore  pyproject.toml  pytest.ini  requirements.txt
backend/app/: database.py  main.py
backend/app/api/routes/: calorie_consume_records.py  food_items.py  meals.py  weight_entries.py
backend/app/clients/: open_food_facts.py
backend/app/models/: calorie_consume_record.py  food_item.py  meal.py  weight_entry.py
backend/app/repositories/: calorie_consume_record.py  food_item.py  meal.py  weight_entry.py
backend/app/schemas/: calorie_consume_record.py  food_item.py  meal.py  weight_entry.py
backend/app/services/: calorie_consume_record.py  food_item.py  meal.py  weight_entry.py
backend/tests/: conftest.py  test_api.py  test_calorie_consume_records_api.py  test_calorie_consume_records_repository.py  test_calorie_consume_records_service.py  test_food_items_api.py  test_food_items_repository.py  test_food_items_service.py  test_repository.py  test_service.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: BarcodeScanner.tsx  BottomNav.tsx  Header.tsx  QuickAdd.tsx  SettingsMenu.tsx  Toast.tsx  WeightGraph.tsx
frontend/src/context/: PreferencesContext.tsx
frontend/src/pages/: FoodsPage.tsx  HomePage.tsx  LogPage.tsx  ManagePage.tsx  MealsPage.tsx
frontend/src/types/: index.ts
nginx/: nginx.conf
nginx-proxy/: generate-certs.sh  nginx.conf
